--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <df-messenger
       intent="WELCOME"
       chat-title="StrokeBot"
-      agent-id="YOUR_AGENT_ID_HERE"
+      agent-id="stella-ompc"
       language-code="en"
     ></df-messenger>
   </body>
