--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Stroke Education Chatbot</title>
+    <title>StrokeBot</title>
     <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
   </head>
   <body>
     <df-messenger
       intent="WELCOME"
       chat-title="StrokeBot"
+      chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712035.png"
       agent-id="stella-ompc"
       language-code="en"
     ></df-messenger>
