--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
       intent="WELCOME"
       chat-title="StrokeBot"
       chat-icon="https://cdn-icons-png.flaticon.com/512/4712/4712035.png"
-      agent-id="stella-ompc"
+      agent-id="stella-apti"
       language-code="en"
     ></df-messenger>
   </body>
 </html>
+
